--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.12"
 django = "^5.1.6"
 djangorestframework = "^3.15.2"
+django-cors-headers = "^4.7.0"
 
 
 [build-system]
