--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 django = "^5.1.6"
 djangorestframework = "^3.15.2"
 django-cors-headers = "^4.7.0"
+drf-spectacular = "^0.28.0"
 
 
 [build-system]
